- Municipality groups are now marked as required on form status creation/edit - After creating a form design, you will now be taken to the EditForm page for that form instead of just seeing the list reload. Files modified - [ManageForms.js,ManageForms.html,EditGISRecord.js,ManageForms.variables.json,EditGISRecord.variables.json,ManageMunicipalities.variables.json,EditForm.html,EditGISRecord.html]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -362,12 +362,12 @@
                                                             <wm-gridcolumn name="gridcolumn1" columnwidth="4">
                                                                 <wm-form-field name="municipalityGroupsByProcessOwners" displayname="Municipality Groups By Process Owners" show="true" primary-key="false" generator="assigned" key="municipalityGroupsByProcessOwners"
                                                                 type="list" is-related="true" widget="select" dataset="bind:Variables.MunicipalityGroupsForProcess.dataSet" datafield="All Fields" displayfield="groupName" orderby="groupName:asc" defaultvalue="bind:Variables.MunicipalityGroupsForProcess.firstRecord"
-                                                                placeholder="Select value"></wm-form-field>
+                                                                placeholder="Select value" required="true"></wm-form-field>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn name="gridcolumn1" columnwidth="4">
                                                                 <wm-form-field name="municipalityGroupsByWriteAccess" displayname="Municipality Groups By Write Access" show="true" primary-key="false" generator="assigned" key="municipalityGroupsByWriteAccess"
                                                                 type="list" is-related="true" widget="select" placeholder="Select value" dataset="bind:Variables.MunicipalityGroupsForProcess.dataSet" datafield="All Fields" displayfield="groupName" orderby="groupName:asc"
-                                                                defaultvalue="bind:Variables.MunicipalityGroupsForProcess.firstRecord"></wm-form-field>
+                                                                defaultvalue="bind:Variables.MunicipalityGroupsForProcess.firstRecord" required="true"></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow120_1">
